# gamesEng

./: .gitignore  CMakeLists.txt  README.md
2_invaders/: bullet.cpp  bullet.h  game.h  main.cpp  ship.cpp  ship.h
4_tile_engine/: game.h  main.cpp  player.cpp  player.h
5_pacman/: cmp_actor_movement.cpp  cmp_actor_movement.h  cmp_enemy_ai.cpp  cmp_enemy_ai.h  cmp_pickup.cpp  cmp_pickup.h  cmp_sprite.cpp  cmp_sprite.h  entity.cpp  entity.h  game.h  main.cpp  pacman.cpp  pacman.h  scene.cpp  scene.h  system_renderer.h
6_physics/: main.cpp
7_platformer/: platformer_main.cpp
7_platformer/components/: cmp_text.cpp
7_platformer/scenes/: scene_level1.cpp  scene_level2.cpp  scene_level3.cpp
8_steering/: astar.cpp  game.h  main.cpp  steering.cpp  steering.h
8_steering/components/: cmp_actor_movement.cpp  cmp_actor_movement.h  cmp_ai_steering.cpp  cmp_ai_steering.h  cmp_sprite.cpp  cmp_text.cpp  cmp_text.h
8_steering/scenes/: scn_menu.cpp  scn_menu.h  scn_pathfinding.cpp  scn_pathfinding.h  scn_steering.cpp  scn_steering.h
9_decisions/: astar.cpp  main.cpp  steering.cpp  steering.h  steering_decisions.h  steering_states.cpp  steering_states.h
9_decisions/components/: cmp_hurt_player.cpp  cmp_hut_player.cpp
9_decisions/scenes/: scene_decision.cpp  scene_decision.h  scene_menu.cpp  scene_menu.h  scene_state.cpp  scene_state.h
lib_ecm/: ecm.cpp  ecm.h
lib_engine/: engine.cpp  engine.h
lib_maths/: maths.h
lib_tile_level_loader/: LevelSystem.cpp  LevelSystem.h
practical_1/: main.cpp
res/levels/: level_1.txt  level_2.txt  level_3.txt
